# CPP4_3DViewer_v2.0

./: README.md
src/Test/: Makefile  RESULT_VALGRIND.txt  TestFileParser.cc  s21_test_file  s21_test_file-TestFileParser.gcda  s21_test_file-TestFileParser.gcno  s21_test_file-fileparserfacade.gcda  s21_test_file-fileparserfacade.gcno
src/app/: CMakeLists.txt  ColorButtone.qml  ListButtone.qml  ListButtoneForSize.qml  MySlider.qml  TextButtone.qml  TitleLabel.qml  fileparserfacade.cpp  fileparserfacade.h  fshader.fsh  main.cpp  main.qml  openglwindow.cpp  openglwindow.h  resource.qrc  vshader.vsh  widget.cpp  widget.h
